# poetry_jupyter_demo

./: .gitignore  README.md  pyproject.toml  setup.py
demo_project/: __init__.py  demo.py
tests/: test_demo_project.py
