[tool.poetry]
name = "demo_project"
version = "0.1.0"
description = ""
authors = ["ejolly <eshin.jolly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pycodestyle = "^2.6.0"
flake8 = "^3.8.4"
black = "^20.8b1"
ipykernel = "^5.4.3"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
